--- a/test subjects/testcatg.html
+++ b/test subjects/testcatg.html
@@ -164,7 +164,10 @@
     </script>
 
 </body>
-
-<script src="../js/categories.js"> </script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="./testcatg.js"> </script>
 
 </html>
