debugged addblog portion

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="sub-header text-capitalize font-weight-bold ">
                     <ul class="left-menu">
                         <li><a href="pages/about.html">about</a></li>
-                        <li><a href="pages/addBlog.html">Add Blog</a></li>
+                        <li><a href="./pages/addBlog.html">Add Blog</a></li>
                     </ul>
                     <div class="logo">
                         <a href="index.html">NishbruhCodes</a>
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div id="data-blog-list">
-                        <!-- Dynmic Blog List goes here -->
+                        <!-- Dynmic Blog List goes here  -->
 
                     </div>
                     <div class="submit-btn mt-5">
@@ -121,8 +121,8 @@
             })
             let target = 'data-blog-list';
             let target2 = '.omg'
-
-            generateBlogs(target);
+            displaydata('#data-blog-list');
+            // generateBlogs(target);
         });
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
