--- a/pages/AddCategories.html
+++ b/pages/AddCategories.html
@@ -128,7 +128,7 @@
 
                 var blog = {};
 
-                if (!Validatefor1elements('#category', '.forerror1', '#forerror2')) {
+                if (!Validatefor1elements('#category', '.forerror1')) {
                     return;
                 } else {
 
