--- a/pages/AddAuthors.html
+++ b/pages/AddAuthors.html
@@ -54,7 +54,7 @@
                     <h4 class=" text-capitalize m-5 text-center display-4">add new authors</h4>
                     <!-- <label for="category" class="font-weight-bold h5 mt-5">Category</label> -->
                     <div class=" forerror1 row"></div>
-                    <div class="forerror2 row mb-5 p-2">
+                    <div class=" row mb-5 p-2">
                         <input type="text" class=" form-control col-sm-8 col-lg-9 " id="author" name="author"
                             placeholder="New Author">
                         <div class=" col-sm-1 "></div>
@@ -128,7 +128,7 @@
 
                 var blog = {};
 
-                if (!Validatefor1elements('#author', '.forerror1', '#forerror2')) {
+                if (!Validatefor1elements('#author', '.forerror1')) {
                     return;
                 } else {
 
