--- a/pages/addBlog.html
+++ b/pages/addBlog.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -32,7 +30,7 @@
             <div class="header">
                 <div class="sub-header text-capitalize font-weight-bold ">
                     <ul class="left-menu">
-                        <li><a href="addBlog.html">Add Blog</a></li>
+                        <li><a href="./blogstext.js">Add Blog</a></li>
                     </ul>
                     <div class="logo">
                         <a href="../index.html">NishbruhCodes</a>
@@ -53,11 +51,13 @@
             <form id="form-blog-list" class="mt-5 mb-5">
                 <input type="hidden" name="id" id="id" value="0" />
                 <input type="hidden" name="date" id="date" />
+                <div class="forerror1"></div>
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
                 </div>
-                <div class="form-group">
+                <div class=" form-group">
+                    <div class="row"></div>
                     <label for="category">Category</label>
                     <input type="text" class="form-control" id="category" name="category" placeholder="Category">
                 </div>
@@ -111,9 +111,10 @@
             </div>
         </div>
     </section>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/blogs.js"> </script>
     <script>
         $(document).ready(function () {
             $(window).on('scroll', function () {
@@ -123,17 +124,17 @@
                     $(".sub-header").removeClass('active');
                 }
             })
-            let target = 'data-blog-list ';
 
 
 
-            document.querySelector("#yolo").addEventListener('click', (e) => {
+            document.querySelector("#yolo").addEventListener('click', () => {
+
                 var blog = {};
-                //validation goes here!
-                if (!Validatefor3elements('#title', '#category', '#author', '#container',
-                        '#form-blog-list')) {
+
+                if (!Validatefor3elements('#title', '#category', '#author', '.forerror1')) {
                     return;
                 } else {
+
                     $.each($("#form-blog-list").serializeArray(), function (_, kv) {
                         if (blog.hasOwnProperty(kv.name)) {
                             blog[kv.name] = $.makeArray(blog[kv.name]);
@@ -142,17 +143,29 @@
                             blog[kv.name] = kv.value;
                         }
                     });
-                    clearance('#title', '#category', '#author', '#description');
+
                     let _id = new Date().toISOString()
                     blog.id = _id
                     blog.date = new Date().toDateString();
-                    addBlog(blog, target);
+                    addtolocal(blog);
+
+
+                    if (document.querySelector('#empity')) {
+
+                        document.querySelector('#empity').remove();
+                    }
+                    clearance('#title', '#category', '#author');
 
                 }
+
+
 
             })
         });
     </script>
+
 </body>
+
+<script src="../js/blogs.js"> </script>
 
 </html>
