clearing field small change

--- a/pages/addBlog.html
+++ b/pages/addBlog.html
@@ -154,7 +154,7 @@
 
                         document.querySelector('#empity').remove();
                     }
-                    clearance('#title', '#category', '#author');
+                    clearance('#title', '#category', '#author', '#description');
 
                 }
 
