--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
+                    <h4 class="text-capitalize mb-5  display-4">Your Blogs</h4>
                     <div id="data-blog-list">
                         <!-- Dynmic Blog List goes here  -->
 
