--- a/pages/AddCategories.html
+++ b/pages/AddCategories.html
@@ -121,10 +121,17 @@
                     $(".sub-header").removeClass('active');
                 }
             })
-            let targetcatg = 'catgul';
+
+            document.querySelector("#category").addEventListener('keydown', function (event) {
+
+                if (event.keyCode == 13) {
+                    event.preventDefault();
+                    capturecatg();
+                }
+            })
 
 
-            document.querySelector("#catgbtn").addEventListener('click', () => {
+            document.querySelector("#catgbtn").addEventListener('click', capturecatg = () => {
 
                 var blog = {};
 
